# pages_tutorial

pages/: tests.py
pages_project/: settings.py
poetry_pages/: pyproject.toml
poetry_pages/tests/: test_poetry_pages.py
templates/: about.html
