[tool.poetry]
name = "poetry_pages"
version = "0.1.0"
description = ""
authors = ["Andy Nelson <andycnelson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "=2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
